--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Test outputs & reports
+playwright-report/
+test-results/
+coverage/
+
+# Environment files
+.env
+.env.*
