--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "clsx": "^2.1.1",
     "d3-hierarchy": "^3.1.2",
     "date-fns": "^4.1.0",
+    "edge-tts-universal": "^1.3.3",
+    "fast-levenshtein": "^3.0.0",
     "framer-motion": "^12.23.24",
     "idb": "^8.0.3",
     "lucide-react": "^0.555.0",
@@ -32,6 +34,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@playwright/test": "^1.57.0",
+    "@types/fast-levenshtein": "^0.0.4",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
