--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.2",
     "@types/canvas-confetti": "^1.9.0",
     "@types/d3-hierarchy": "^3.1.7",
     "@types/uuid": "^10.0.0",
