--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.86.2",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-virtual": "^3.13.13",
     "@types/canvas-confetti": "^1.9.0",
     "@types/d3-hierarchy": "^3.1.7",
     "@types/uuid": "^10.0.0",
