--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-force-graph-2d": "^1.29.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "ts-fsrs": "^5.2.3",
     "uuid": "^13.0.0"
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.57.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/fast-levenshtein": "^0.0.4",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
