--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@supabase/supabase-js": "^2.86.2",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-virtual": "^3.13.13",
@@ -26,6 +27,7 @@
     "edge-tts-universal": "^1.3.3",
     "fast-levenshtein": "^3.0.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.14.2",
     "idb": "^8.0.3",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
