fix: 修复组学习进度显示不全的问题
- embedding.ts: 强制刷新缓存中的卡片状态，防止进度回退
- GuidedLearningSession.tsx: 队列包含所有非掌握状态卡片，确保完整学习
- SessionReport.tsx: 增强报告展示，显示全组进度

--- a/package.json
+++ b/package.json
@@ -1,13 +1,75 @@
 {
-  "name": "english11",
+  "name": "englishoo",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "沉浸式英语词汇学习应用",
+  "author": "lijiahao",
+  "main": "electron/main.cjs",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:dev": "npm run build && electron .",
+    "electron:build": "npm run build && electron-builder --mac",
+    "electron:build:dmg": "npm run build && electron-builder --mac dmg",
+    "electron:build:zip": "npm run build && electron-builder --mac zip"
+  },
+  "build": {
+    "appId": "com.englishoo.app",
+    "productName": "Englishoo",
+    "copyright": "Copyright © 2024 Lijiahao",
+    "asar": false,
+    "directories": {
+      "output": "release",
+      "buildResources": "build"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*",
+      "public/**/*",
+      "!node_modules/**/*"
+    ],
+    "mac": {
+      "category": "public.app-category.education",
+      "icon": "public/pwa-512x512.png",
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "arm64",
+            "x64"
+          ]
+        },
+        {
+          "target": "zip",
+          "arch": [
+            "arm64",
+            "x64"
+          ]
+        }
+      ],
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "identity": null
+    },
+    "dmg": {
+      "title": "Englishoo",
+      "icon": "public/pwa-512x512.png",
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    }
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -50,6 +112,8 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
+    "electron": "^39.2.7",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
